# booking-pet-project

./: .env.example  .gitignore  README.md  pyproject.toml
src/: main.py
src/bookings/: models.py
src/holets/: models.py
src/hotels/: models.py
src/hotels/rooms/: models.py
src/migrations/: env.py
src/migrations/versions/: 2023_08_30_2116-2b92da5bffb1_init.py  2023_09_01_1904-500f3aefb37d_all_tables.py
src/users/: models.py
